<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav__tv"
            android:icon="@drawable/ic_tv_black_24dp"
            android:title="@string/tv" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_ondemand_video_black_24dp"
            android:title="@string/tools" />
    </group>
</menu>