<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_content">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        tools:context=".activity.MainActivity"
        android:fitsSystemWindows="true"
        android:background="#4f5b62"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar_layout"
            android:fitsSystemWindows="true"
            android:background="#263238"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:elevation="3dp"
                    card_view:cardCornerRadius="3dp"
                    >
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="MOVIE APP"
                        android:textColor="#f9f506"
                        android:background="#263238"
                        android:textSize="25sp"
                        android:textStyle="bold|italic"
                        android:paddingLeft="10dp"
                        />
                </android.support.v7.widget.CardView>


                <RelativeLayout
                    android:id="@+id/layout_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_upcoming"
                        android:background="#263238">
                        <TextView
                            android:id="@+id/txt_watch_all_upcoming"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Watch All"
                            android:layout_alignParentRight="true"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="#ffeb3b"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:gravity="center_vertical"
                            android:fitsSystemWindows="true"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/upcoming"
                            android:textSize="20sp"
                            android:textColor="#ffeb3b"
                            android:textStyle="bold"
                            android:paddingLeft="10dp"/>
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_upcoming"
                        android:layout_marginTop="5dp"
                        android:id="@+id/recycleview_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_top_rating"
                    android:layout_below="@id/layout_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_popular"
                        android:background="#263238">
                        <TextView
                            android:id="@+id/txt_watch_all_popular"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Watch All"
                            android:layout_alignParentRight="true"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="#ffeb3b"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:background="#263238"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/popular"
                            android:textSize="20sp"
                            android:textColor="#ffeb3b"
                            android:paddingLeft="10dp"/>
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@+id/text_popular"
                        android:layout_marginTop="5dp"
                        android:id="@+id/recycler_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_below="@id/layout_top_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:id="@+id/layout_upcoming">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_top_rate"
                        android:background="#263238">
                        <TextView
                            android:id="@+id/txt_watch_all_toprate"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Watch All"
                            android:layout_alignParentRight="true"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="#ffeb3b"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:background="#263238"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/toprate"
                            android:textSize="20sp"
                            android:textColor="#ffeb3b"
                            android:paddingLeft="10dp"/>
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_top_rate"
                        android:layout_marginTop="5dp"
                        android:id="@+id/recycler_top_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@id/layout_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_now_playing"
                        android:background="#263238">
                        <TextView
                            android:id="@+id/txt_watch_all_now_playing"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Watch All"
                            android:layout_alignParentRight="true"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="#ffeb3b"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:background="#263238"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/nowplaying"
                            android:textSize="20sp"
                            android:textColor="#ffeb3b"
                            android:paddingLeft="10dp"/>
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_now_playing"
                        android:layout_marginTop="5dp"
                        android:id="@+id/recycler_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </RelativeLayout>

        </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floating_btn"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_slideshow_black_24dp"
            app:backgroundTint="#ff0022"
            />


    </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.SwipeRefreshLayout>


    
</android.support.v4.widget.DrawerLayout>